<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="16dp"
android:stretchColumns="1">

<TableRow android:background="#128675">

    <TextView
        android:layout_column="0"
        android:padding="3dip"
        android:text="Producto"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_column="0"
        android:padding="3dip"
        android:text="Cantidad"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_column="2"
        android:padding="3dip"
        android:text="Subtotal"
        android:textColor="@android:color/white" />
</TableRow>

<TableRow
    android:id="@+id/tbl1">

    <TextView
        android:id="@+id/producto1"
        android:layout_column="0"
        android:padding="3dip"
        android:text="@string/text1" />

    <TextView
        android:id="@+id/cantidad1"
        android:layout_column="0"
        android:padding="3dip"
        android:text="" />

    <TextView
        android:id="@+id/subtotal1"
        android:layout_column="2"
        android:gravity="left"
        android:padding="3dip"
        android:text="" />
</TableRow>

    <TableRow
        android:id="@+id/tbl2">

        <TextView
            android:id="@+id/producto2"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/text2" />

        <TextView
            android:id="@+id/cantidad2"
            android:layout_column="0"
            android:padding="3dip"
            android:text="" />

        <TextView
            android:id="@+id/subtotal2"
            android:layout_column="2"
            android:gravity="left"
            android:padding="3dip"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tbl3">

        <TextView
            android:id="@+id/producto3"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/text3" />

        <TextView
            android:id="@+id/cantidad3"
            android:layout_column="0"
            android:padding="3dip"
            android:text="" />

        <TextView
            android:id="@+id/subtotal3"
            android:layout_column="2"
            android:gravity="left"
            android:padding="3dip"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tbl4">

        <TextView
            android:id="@+id/producto4"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/text4" />

        <TextView
            android:id="@+id/cantidad4"
            android:layout_column="0"
            android:padding="3dip"
            android:text="" />

        <TextView
            android:id="@+id/subtotal4"
            android:layout_column="2"
            android:gravity="left"
            android:padding="3dip"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tbl5">

        <TextView
            android:id="@+id/producto5"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/text5" />

        <TextView
            android:id="@+id/cantidad5"
            android:layout_column="0"
            android:padding="3dip"
            android:text="" />

        <TextView
            android:id="@+id/subtotal5"
            android:layout_column="2"
            android:gravity="left"
            android:padding="3dip"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tbl6">

        <TextView
            android:id="@+id/producto6"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/text6" />

        <TextView
            android:id="@+id/cantidad6"
            android:layout_column="0"
            android:padding="3dip"
            android:text="" />

        <TextView
            android:id="@+id/subtotal6"
            android:layout_column="2"
            android:gravity="left"
            android:padding="3dip"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tbl7">

        <TextView
            android:id="@+id/producto7"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/text7" />

        <TextView
            android:id="@+id/cantidad7"
            android:layout_column="0"
            android:padding="3dip"
            android:text="" />

        <TextView
            android:id="@+id/subtotal7"
            android:layout_column="2"
            android:gravity="left"
            android:padding="3dip"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tbl8">

        <TextView
            android:id="@+id/producto8"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/text8" />

        <TextView
            android:id="@+id/cantidad8"
            android:layout_column="0"
            android:padding="3dip"
            android:text="" />

        <TextView
            android:id="@+id/subtotal8"
            android:layout_column="2"
            android:gravity="left"
            android:padding="3dip"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tbl9">

        <TextView
            android:id="@+id/producto9"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/text9" />

        <TextView
            android:id="@+id/cantidad9"
            android:layout_column="0"
            android:padding="3dip"
            android:text="" />

        <TextView
            android:id="@+id/subtotal9"
            android:layout_column="2"
            android:gravity="left"
            android:padding="3dip"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/tbl10">

        <TextView
            android:id="@+id/producto10"
            android:layout_column="0"
            android:padding="3dip"
            android:text="@string/text10" />

        <TextView
            android:id="@+id/cantidad10"
            android:layout_column="0"
            android:padding="3dip"
            android:text="" />

        <TextView
            android:id="@+id/subtotal10"
            android:layout_column="2"
            android:gravity="left"
            android:padding="3dip"
            android:text="" />
    </TableRow>

<View
    android:layout_height="2dip"
    android:background="#FF909090" />

<TableRow>

    <TextView
        android:layout_column="1"
        android:padding="3dip"
        android:text="Total a pagar"
        android:textColor="#128675" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="left"
        android:gravity="right"
        android:padding="3dip"
        android:text="$43,4" />
</TableRow>

    <Button
        android:id="@+id/btnFinalizarCompra"
        android:text="@string/btnFinalizarCompra" />


</TableLayout>